force-app/main/default/objects/d4c_CarrierAppointment__c/d4c_CarrierAppointment__c.object-meta.xml
<CustomObject>
    <label>NIPR Carrier Appointment</label>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NIPR Carrier Appointments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>