force-app/main/default/objects/d4c_CarrierAppointment__c/fields/d4c_AppointmentEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>d4c_AppointmentEffectiveDate__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>