force-app/main/default/objects/d4c_CarrierAppointment__c/fields/d4c_Entity__c.field-meta.xml
<CustomField>
    <fullName>d4c_Entity__c</fullName>
    <label>Entity</label>
    <referenceTo>d4c_Entity__c</referenceTo>
    <relationshipName>Insurance_Appointments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>