force-app/main/default/objects/d4c_CarrierAppointment__c/fields/d4c_RenewalDate__c.field-meta.xml
<CustomField>
    <fullName>d4c_RenewalDate__c</fullName>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>