force-app/main/default/objects/d4c_CarrierAppointment__c/fields/d4c_StateOrProvinceCode__c.field-meta.xml
<CustomField>
    <fullName>d4c_StateOrProvinceCode__c</fullName>
    <label>State Or ProvinceCode</label>
    <length>15</length>
    <type>Text</type>
</CustomField>