force-app/main/default/objects/d4c_CarrierAppointment__c/fields/d4c_TerminationEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>d4c_TerminationEffectiveDate__c</fullName>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>