force-app/main/default/objects/d4c_CarrierAppointment__c/fields/d4c_TerminationReason__c.field-meta.xml
<CustomField>
    <fullName>d4c_TerminationReason__c</fullName>
    <label>Termination Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>