force-app/main/default/objects/d4c_CarrierAppointment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>d4c_StatusCode__c</columns>
    <columns>d4c_StateOrProvinceCode__c</columns>
    <columns>d4c_AppointmentEffectiveDate__c</columns>
    <columns>d4c_TerminationEffectiveDate__c</columns>
    <columns>d4c_Carrier__c</columns>
    <columns>d4c_Entity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>